Added strong naming to MPFit library

--- a/lib/mpfit/src/MPFitLib/MPFitLib.csproj
+++ b/lib/mpfit/src/MPFitLib/MPFitLib.csproj
@@ -14,6 +14,8 @@
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>MPFit.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -59,6 +61,9 @@
     <Compile Include="mp_func.cs" />
     <Compile Include="mp_par.cs" />
     <Compile Include="mp_result.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MPFit.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
