Added the new graphic to the GUI interface and altered the look of the GUI to look more like the new websites

--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -335,6 +335,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\OutOfBrowserSettings.xml" />
+    <Resource Include="Resources\Images\logo-small.png" />
     <Content Include="Resources\Images\vpbanner.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
