Added Vts.Database.Desktop with links to Vts.Database.  Added reference to this library to Vts.Desktop.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -766,6 +766,12 @@
     </None>
     <None Include="Vts.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vts.Database.Desktop\Vts.Database.Desktop.csproj">
+      <Project>{4FE8D1A5-E651-4264-B6A0-3D8143D7F413}</Project>
+      <Name>Vts.Database.Desktop</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
