--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -217,8 +217,8 @@
     <Compile Include="MonteCarlo\Interfaces\ISimulationOptions.cs" />
     <Compile Include="MonteCarlo\Interfaces\ISource.cs" />
     <Compile Include="MonteCarlo\Interfaces\ISourceInput.cs" />
-    <Compile Include="MonteCarlo\Interfaces\ITally.cs" />
-    <Compile Include="MonteCarlo\Interfaces\ITallyOfT.cs" />
+    <Compile Include="MonteCarlo\Interfaces\ITerminationTally.cs" />
+    <Compile Include="MonteCarlo\Interfaces\ITerminationTallyOfT.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissue.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissueInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissueRegion.cs" />
