--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -57,6 +57,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Meta.Numerics\build\Desktop\Meta.Numerics.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Unity\Desktop\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Unity\Desktop\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="MPFitLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\mpfit\build\Desktop\MPFitLib.dll</HintPath>
@@ -254,11 +262,11 @@
     <Compile Include="..\Vts\Modeling\ForwardSolvers\DiffusionParameters.cs">
       <Link>Modeling\ForwardSolvers\DiffusionParameters.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\DistributedGaussianSourceDiffusionForwardSolver.cs">
-      <Link>Modeling\ForwardSolvers\DistributedGaussianSourceDiffusionForwardSolver.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\DistributedGaussianSourceSDAForwardSolver.cs">
+      <Link>Modeling\ForwardSolvers\DistributedGaussianSourceSDAForwardSolver.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\DistributedPointSourceDiffusionForwardSolver.cs">
-      <Link>Modeling\ForwardSolvers\DistributedPointSourceDiffusionForwardSolver.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\DistributedPointSourceSDAForwardSolver.cs">
+      <Link>Modeling\ForwardSolvers\DistributedPointSourceSDAForwardSolver.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\ForwardSolverBase.cs">
       <Link>Modeling\ForwardSolvers\ForwardSolverBase.cs</Link>
@@ -296,8 +304,8 @@
     <Compile Include="..\Vts\Modeling\ForwardSolvers\pMCLoader.cs">
       <Link>Modeling\ForwardSolvers\pMCLoader.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\PointSourceDiffusionForwardSolver.cs">
-      <Link>Modeling\ForwardSolvers\PointSourceDiffusionForwardSolver.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\PointSourceSDAForwardSolver.cs">
+      <Link>Modeling\ForwardSolvers\PointSourceSDAForwardSolver.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\SFDDiffusionForwardSolver.cs">
       <Link>Modeling\ForwardSolvers\SFDDiffusionForwardSolver.cs</Link>
