updates to tests, Gaussian beam versatility, and distributed source normalization factor

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -125,6 +125,9 @@
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\BSplinesCoefficientsTest.cs">
       <Link>Modeling\ForwardSolvers\BSplinesCoefficientsTest.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs">
+      <Link>Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\NurbsForwardSolverTest.cs">
       <Link>Modeling\ForwardSolvers\NurbsForwardSolverTest.cs</Link>
     </Compile>
