--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Common\PositionTests.cs" />
     <Compile Include="Factories\SolverFactoryTest.cs" />
     <Compile Include="Modeling\ForwardSolvers\BSplinesCoefficientsTest.cs" />
+    <Compile Include="Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs" />
     <Compile Include="Modeling\LoadValidationData.cs" />
     <Compile Include="Modeling\MetaNumericsZeroOrderBesselFunction.cs" />
     <Compile Include="Modeling\ForwardSolvers\NurbsForwardSolverTest.cs" />
