--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -150,6 +150,7 @@
     <Compile Include="MonteCarlo\Detectors\pMCDetectorInputTests.cs" />
     <Compile Include="MonteCarlo\MonteCarloFactoriesTests.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs" />
+    <Compile Include="MonteCarlo\TallyActions\pMCTallyActionsTests.cs" />
     <Compile Include="MonteCarlo\TallyActions\TallyActionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ArrayExtensionsTests.cs" />
@@ -1163,7 +1164,6 @@
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
     <Folder Include="Modeling\Tools\" />
-    <Folder Include="MonteCarlo\TallyActions\pMCTallies\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\v3.0\Microsoft.Silverlight.CSharp.targets" Condition="" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
