Relaxed forward solver requirements by providing "dummy" methods in ForwardSolverBase. Now, only need to override the desired methods. Implemented index-matched R(theta) using Discrete Ordinates (requires further testing/debugging). Added COM visibility for ComputationFactory methods in desktop Vts.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -119,6 +119,9 @@
     <Compile Include="..\Vts.Test\Common\PositionTests.cs">
       <Link>Common\PositionTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Factories\ComputationFactoryTest.cs">
+      <Link>Factories\ComputationFactoryTest.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Factories\SolverFactoryTest.cs">
       <Link>Factories\SolverFactoryTest.cs</Link>
     </Compile>
