--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -369,6 +369,12 @@
     <None Include="Modeling\Spectroscopy\Fat.csv" />
     <None Include="Vts.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vts.Database\Vts.Database.csproj">
+      <Project>{79A38678-1464-4E60-94AA-82B47DFDB334}</Project>
+      <Name>Vts.Database</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\v3.0\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
